trustfall_core/src/resources/test_data/valid_queries/filter_op_has_substring.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(min: 10, max: 13) {
        name @output @filter(op: "has_substring", value: ["$substr"])
    }
}"#,
    arguments: {
        "substr": String("el")
    },
)
