trustfall_core/src/resources/test_data/parse_errors/invalid_filter_argument_name_start.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        name @output @filter(op: "has_substring", value: ["$1forexample"])
    }
}"#,
    arguments: {
        "1forexample": String("src")
    }
)
